# doom

./: .gitignore  .gitmodules  CMakeLists.txt  README.mdown
src/: component.cpp  component.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  game_screen.cpp  game_screen.hpp  level.cpp  level.hpp  main.cpp  system.cpp  system.hpp
src/audio/: music.cpp  music.hpp  sound.cpp
src/component/: position_component.cpp  position_component.hpp  sprite_component.cpp  sprite_component.hpp  velocity_component.cpp  velocity_component.hpp
src/screen/: level_screen.cpp  level_screen.hpp
src/system/: logic_system.cpp  logic_system.hpp  render_system.cpp  render_system.hpp
src/system/logic/: movement_system.cpp  movement_system.hpp
